tests/neg/param-opt.jo
param newLine: Bool = 3  // error

def printOpt(s: String): Unit =
  print s
  if newLine then print "\n"

def main =
  printOpt "hello "
  printOpt "world!" with newLine = true
